--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -20,8 +20,7 @@
                 <div class="sitecard__overlay">
                   <mat-icon>edit</mat-icon> <span style="font-size: 26px">Edit</span>
                 </div>
-                <div class="sitecard-preview"
-                  style="background-image: url(https://www.geppettosoftware.com/wp-content/uploads/2018/02/Introslide.jpg)">
+                <div class="sitecard-preview" style="background-image: url(https://www.geppettosoftware.com/wp-content/uploads/2018/02/Introslide.jpg)">
                 </div>
               </a>
             </div>
@@ -111,9 +110,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="app-context">{{ 'app_context' | i18next }}</label>
-                <input type="text" class="form-control" placeholder="{{'placeholder_appContext' | i18next}}"
-                  id="app-context" formControlName="appContext"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.appContext.errors }">
+                <input type="text" class="form-control" placeholder="{{'placeholder_appContext' | i18next}}" id="app-context"
+                  formControlName="appContext" [ngClass]="{ 'is-invalid': submitted && form_control.appContext.errors }">
                 <div *ngIf="submitted && form_control.appContext.errors" class="invalid-feedback">
                   <div *ngIf="form_control.appContext.errors.required">{{'require_appContext' | i18next}}</div>
                 </div>
@@ -123,9 +121,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="description">{{ 'description' | i18next }}</label>
-                <textarea class="form-control" rows="1" id="description"
-                  placeholder="{{'placeholder_description' | i18next}}" formControlName="description"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
+                <textarea class="form-control" rows="1" id="description" placeholder="{{'placeholder_description' | i18next}}"
+                  formControlName="description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
                 <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                   <div *ngIf="form_control.description.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -137,8 +134,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="primary-language">{{ 'primary_language' | i18next }}</label>
-                <select class="form-control" id="primary-language" formControlName="primaryLanguage"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.primaryLanguage.errors }">
+                <select class="form-control" id="primary-language" formControlName="primaryLanguage" [ngClass]="{ 'is-invalid': submitted && form_control.primaryLanguage.errors }">
                   <option value="" selected>{{'select_primary' | i18next}}</option>
                   <option value="english">English</option>
                   <option value="tamil">Tamil</option>
@@ -154,8 +150,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="secondary-language">{{ 'secondary_language' | i18next }}</label>
-                <select class="form-control" id="secondary-language" formControlName="secondaryLanguage"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.secondaryLanguage.errors }">
+                <select class="form-control" id="secondary-language" formControlName="secondaryLanguage" [ngClass]="{ 'is-invalid': submitted && form_control.secondaryLanguage.errors }">
                   <option value="" selected>{{'select_secondary' | i18next}}</option>
                   <option *ngFor="let c of languages" [ngValue]="c">{{ c }}</option>
                 </select>
