Login Functionality added.

--- a/application/clients/desktop/src/styles.scss
+++ b/application/clients/desktop/src/styles.scss
@@ -3,7 +3,7 @@
 //@import '~ngx-toastr/toastr-bs4-alert';
 @import '~ngx-toastr/toastr.css';
 
-
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import "~ag-grid-community/dist/styles/ag-grid.css";
 @import "~ag-grid-community/dist/styles/ag-theme-balham.css";
