--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -16,38 +16,87 @@
           <button class="btn btn-primary ml-sm-2">Ticket Details
           </button>
         </div> -->
+        <div class="float-right">
+          <button class="btn btn-primary" (click)="openScreenModal()">Add Screens</button>
+          </div>
         <div class="row" style="margin: 0px;">
-          <div class="col-md-4" *ngFor="let name of screen">
+          <div class="col-md-4" *ngFor="let screen of screens">
             <div class="card">
               <div class="card-header">
-                {{name}}
+                {{screen.screenName}}
               </div>
               <div class="card-body">
-                <button class="btn btn-primary" (click)="showFlow()">See Flows</button>
+                <button class="btn btn-primary" (click)="getAllFeatureFlows(screen.screenName)">See Flows</button>
               </div>
             </div>
           </div>
-          <div class="col-md-4" *ngIf="screen.length === 0">
+          <div class="col-md-4" *ngIf="screens.length === 0">
             No  Available.
           </div>
         </div>
+        
       </mat-expansion-panel>
     </mat-accordion>
   </div>
 
-  <div class="flowTable mt-sm-5" *ngIf="showFeatureFlow">
-    <h1>Feature Flow</h1>
+  <div class="row row-button mt-sm-3 mb-sm-3" *ngIf='showFeatureFlow'>
+    <button mat-raised-button color="primary" (click)="openModal('create')">Create</button>
+    <button mat-raised-button (click)="openModal('update')">Update</button>
+    <button mat-raised-button color="warn" (click)="deleteRow()">Delete</button>
+  </div>
+  <div class="flowTable" *ngIf="showFeatureFlow">
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnDefs"
       [rowSelection]="rowSelection" [rowData]="rowData" [animateRows]="true" [defaultColDef]="defaultColDef"
        (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)">
     </ag-grid-angular>
   </div>
-
-  <div class="flowTable mt-sm-5" *ngIf="showFeatureFlowComponent">
-      <h1>Feature Flow Components</h1>
+  <div class="row row-button mt-sm-3 mb-sm-3" *ngIf='showFeatureFlowComponent'>
+    <button mat-raised-button color="primary" (click)="openModal('create')">Create</button>
+    <button mat-raised-button (click)="openModal('update')">Update</button>
+    <button mat-raised-button color="warn" (click)="deleteRow()">Delete</button>
+  </div>
+  <div class="flowTable" *ngIf="showFeatureFlowComponent">
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnFeatureDefs"
       [rowSelection]="rowSelection" [rowData]="rowFlowCompData" [animateRows]="true" [defaultColDef]="defaultColDef"
        (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)">
     </ag-grid-angular>
+  </div>
+</div>
+
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayModel}">
+  <div class="modal-dialog modal-lg" role="dialog">
+    <div class="modal-content">
+      <div class="container">
+        <form class="m-3">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="screen">Screen Name</label>
+                <input type="text" class="form-control" rows="1" id="screen-name" placeholder="Enter a screen name"
+                  name="screen-name" [(ngModel)]="screenData.screenName">
+                </div>
+              </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="description">Description</label>
+                <input type="text" class="form-control" placeholder="enter your description" id="description" name="description"
+                  [(ngModel)]="screenData.description">
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <div class="form-group">
+          <button type="button" class="btn button-create" (click)="createScreen()">Create</button>
+          <button type="button" class="btn button-close" (click)="onCloseHandled()">Cancel</button>
+        </div>
+        <div class="form-group" *ngIf="checkUpdate">
+          <button type="button" class="btn button-create" (click)="updateFlowModel()">Update</button>
+          <button type="button" class="btn button-close" (click)="onCloseHandledForUpdate()">Cancel</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
