--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -18,7 +18,7 @@
         </div> -->
         <div class="float-right">
           <button class="btn btn-primary" (click)="openScreenModal()">Add Screens</button>
-          </div>
+        </div>
         <div class="row" style="margin: 0px;">
           <div class="col-md-4" *ngFor="let screen of screens">
             <div class="card">
@@ -31,10 +31,10 @@
             </div>
           </div>
           <div class="col-md-4" *ngIf="screens.length === 0">
-            No  Available.
+            No Available.
           </div>
         </div>
-        
+
       </mat-expansion-panel>
     </mat-accordion>
   </div>
@@ -44,10 +44,10 @@
     <button mat-raised-button (click)="openModal('update')">Update</button>
     <button mat-raised-button color="warn" (click)="deleteRow()">Delete</button>
   </div> -->
-  <div class="flowTable" *ngIf="showFeatureFlow">
-    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnDefs"
-      [rowSelection]="rowSelection" [rowData]="rowData" [animateRows]="true" [defaultColDef]="defaultColDef"
-       (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)">
+  <div class="flowTable mt-sm-3" *ngIf="showFeatureFlow">
+    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
+      [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="rowData" [animateRows]="true"
+      [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureFlow() (gridReady)="onFlowGridReady($event)">
     </ag-grid-angular>
   </div>
   <!-- <div class="row row-button mt-sm-3 mb-sm-3" *ngIf='showFeatureFlowComponent'>
@@ -55,10 +55,10 @@
     <button mat-raised-button (click)="openModal('update')">Update</button>
     <button mat-raised-button color="warn" (click)="deleteRow()">Delete</button>
   </div> -->
-  <div class="flowTable" *ngIf="showFeatureFlowComponent">
-    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnFeatureDefs"
-      [rowSelection]="rowSelection" [rowData]="rowFlowCompData" [animateRows]="true" [defaultColDef]="defaultColDef"
-       (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)">
+  <div class="flowTable mt-sm-3" *ngIf="showFeatureFlowComponent">
+    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
+      [columnDefs]="columnFeatureDefs" [rowSelection]="rowSelection" [rowData]="rowFlowCompData" [animateRows]="true"
+      [defaultColDef]="defaultColDef" (gridReady)="onFlowCompGridReady($event)">
     </ag-grid-angular>
   </div>
 </div>
@@ -75,13 +75,13 @@
                 <label for="screen">Screen Name</label>
                 <input type="text" class="form-control" rows="1" id="screen-name" placeholder="Enter a screen name"
                   name="screen-name" [(ngModel)]="screenData.screenName">
-                </div>
               </div>
+            </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label for="description">Description</label>
-                <input type="text" class="form-control" placeholder="enter your description" id="description" name="description"
-                  [(ngModel)]="screenData.description">
+                <input type="text" class="form-control" placeholder="enter your description" id="description"
+                  name="description" [(ngModel)]="screenData.description">
               </div>
             </div>
           </div>
