--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -7,14 +7,14 @@
     <mat-accordion>
       <mat-expansion-panel [expanded]="true">
         <mat-expansion-panel-header>
-          <mat-panel-title> Features </mat-panel-title>
+          <mat-panel-title>My Features </mat-panel-title>
         </mat-expansion-panel-header>
-        
+
         <div style="padding-right: 20px;">
           <button class="createEntityButton" mat-raised-button color="primary" (click)="openFeatureDialog('create')">Add
             Features</button>
         </div>
-        <div class="row" style="margin: 0px;" *ngIf="featureData && featureData.length > 0">
+        <div class="row" style="margin: 0px;" *ngIf="featureData.length > 0">
           <div class="col-md-4" *ngFor="let feature of featureData; let i = index">
             <div class="card">
               <div class="card-header">
@@ -29,7 +29,8 @@
                 &nbsp; -->
                 <button class="btn btn-primary">Import Feature</button>
                 &nbsp;
-                <button class="btn btn-info" [routerLink]="['/feature-details']"  [queryParams]="{feature: feature.name}">See Details</button>
+                <button class="btn btn-info" [routerLink]="['/feature-details']"
+                  [queryParams]="{feature: feature.name}">See Details</button>
               </div>
             </div>
           </div>
@@ -51,14 +52,16 @@
             <div class="card">
               <div class="card-header">
                 {{entity.name}}
-                <img *ngIf="!entity.is_default" style="float: right; cursor: pointer;" (click)="editEntity(entity)" src="https://img.icons8.com/metro/26/000000/edit-file.png">
+                <img *ngIf="!entity.is_default" style="float: right; cursor: pointer;" (click)="editEntity(entity)"
+                  src="https://img.icons8.com/metro/26/000000/edit-file.png">
               </div>
               <div class="card-body">
                 <div><span>{{entity.description}}</span></div>
                 <br />
                 <button mat-raised-button color="primary" (click)="editEntityField(entity)">Edit</button>
                 &nbsp;
-                <button mat-raised-button color="warn" [disabled]="entity.is_default" (click)="openDeleteModel(entity)">Delete</button>
+                <button mat-raised-button color="warn" [disabled]="entity.is_default"
+                  (click)="openDeleteModel(entity)">Delete</button>
               </div>
             </div>
           </div>
@@ -174,7 +177,8 @@
           <div *ngIf="!selectFeature" class="dropdown mt-sm-2 mb-sm-2">
             <div class="form-group">
               <label for="sel1">Import Existing Feature:</label>
-              <select class="form-control" (change)="onChange($event.target.value)">
+              <select class="form-control" [(ngModel)]="features.name" (change)="onChange($event.target.value)">
+                <option value="" selected>Select Feature</option>
                 <option *ngFor="let feature of featureData" value="{{feature.name}}"
                   ([ngModel])="selectedExistingFeature">{{feature.name}}</option>
               </select>
@@ -198,16 +202,16 @@
           </form>
         </div>
       </div>
-      <div class="modal-footer" style="padding: 5px" *ngIf="!selectFeature">
+      <!-- <div class="modal-footer" style="padding: 5px" *ngIf="!selectFeature">
         <button class="btn btn-primary" (click)="createFeature()">Create</button>
         <button type="button" class="btn btn-default" (click)="closeFeatureExistingModel()">Cancel</button>
-      </div>
+      </div> -->
       <div class="modal-footer" style="padding: 5px" *ngIf="selectFeature && !showUpdateFeature">
         <button class="btn btn-primary" (click)="createFeature()">Create</button>
         <button type="button" class="btn btn-default" (click)="closeFeatureCreateModel()">Cancel</button>
       </div>
-      <div class="modal-footer" style="padding: 5px" *ngIf="showUpdateFeature && selectFeature">
-        <button class="btn btn-primary" (click)="updateFeature()">Update</button>
+      <div class="modal-footer" style="padding: 5px" *ngIf="showUpdateFeature && !selectFeature">
+        <button class="btn btn-primary" (click)="updateFeature()">Import</button>
         <button type="button" class="btn btn-default" (click)="closeFeatureExistingModel()">Cancel</button>
       </div>
     </div>
