small issue fixed

--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -50,7 +50,7 @@
         </div>
 
       </mat-expansion-panel>
-      <mat-expansion-panel>
+      <!-- <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title> Screens </mat-panel-title>
         </mat-expansion-panel-header>
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-      </mat-expansion-panel>
+      </mat-expansion-panel> -->
     </mat-accordion>
   </div>
 
