--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -29,11 +29,23 @@
         <mat-expansion-panel-header>
           <mat-panel-title> Entities </mat-panel-title>
         </mat-expansion-panel-header>
-
-        <div class="float-right">
-          <button class="btn btn-primary" (click)="openScreenModal()">Add Screens</button>
+        <div class="flowTable mt-sm-3">
+          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
+            [columnDefs]="columnFeatureEntityData" [rowSelection]="rowSelection" [rowData]="featureEntityData"
+            [animateRows]="true" [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureEntityData() (gridReady)="onFeatureEntityDataGridReady($event)">
+          </ag-grid-angular>
         </div>
-        <div class="row" style="margin: 0px;">
+
+        <div class="flowTable mt-sm-3">
+          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
+            [columnDefs]="columnFeatureEntity" [rowSelection]="rowSelection" [rowData]="featureEntity"
+            [animateRows]="true" [defaultColDef]="defaultColDef" (gridReady)="onFeatureEntityGridReady($event)">
+          </ag-grid-angular>
+        </div>
+        <!-- <div class="float-right">
+          <button class="btn btn-primary" (click)="openScreenModal()">Add Screens</button>
+        </div> -->
+        <!-- <div class="row" style="margin: 0px;">
           <div class="col-md-4" *ngFor="let screen of screens">
             <div class="card">
               <div class="card-header">
@@ -47,10 +59,10 @@
           <div class="col-md-4" *ngIf="screens.length === 0">
             No Available.
           </div>
-        </div>
+        </div> -->
 
       </mat-expansion-panel>
-      <!-- <mat-expansion-panel>
+       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title> Screens </mat-panel-title>
         </mat-expansion-panel-header>
@@ -65,7 +77,8 @@
                 {{screen.screenName}}
               </div>
               <div class="card-body">
-                <button class="btn btn-primary" (click)="getAllFeatureFlows(screen.screenName)">See Flows</button>
+                  {{screen.description}}
+                <!-- <button class="btn btn-primary" (click)="getAllFeatureFlows(screen.screenName)">See Flows</button> -->
               </div>
             </div>
           </div>
@@ -74,7 +87,7 @@
           </div>
         </div>
 
-      </mat-expansion-panel> -->
+      </mat-expansion-panel>
     </mat-accordion>
   </div>
 
