--- a/application/clients/desktop/src/app/navigation/header/header.component.html
+++ b/application/clients/desktop/src/app/navigation/header/header.component.html
@@ -22,6 +22,9 @@
           <a class="dropdown-item" routerLink="/available-connector">Available Connector</a>
         </div>
       </div>
+      <div>
+        <button class="btn btn-secondary" (click)="Logout()" type="button">LogOut</button>
+      </div>
     </ul>
   </div>
 </mat-toolbar>
