--- a/application/clients/desktop/src/app/login/login.component.html
+++ b/application/clients/desktop/src/app/login/login.component.html
@@ -6,7 +6,7 @@
     </mat-card-header>
     <mat-form-field class="loginname" appearance="outline">
         <mat-label>Email Id</mat-label>
-        <input matInput type="text" [(ngModel)]='user.username'>
+        <input matInput type="text" [(ngModel)]='user.email'>
     </mat-form-field>
     <br>
     <mat-form-field class="password" appearance="outline">
