--- a/application/clients/desktop/src/app/navigation/header-controls/header.language.component.html
+++ b/application/clients/desktop/src/app/navigation/header-controls/header.language.component.html
@@ -1,7 +1,11 @@
 <div class="lang-head">
+  <span>
+    {{lastloggedintime}}
+  </span>
   <span class="about-span" (click)="showAbout()">About</span>
   <ng-template ngFor let-lang [ngForOf]="languages" let-i="index">
-    <a *ngIf="language !== lang" href="javascript:void(0)" class="link lang-item {{lang}} space" (click)="changeLanguage(lang)">{{
+    <a *ngIf="language !== lang" href="javascript:void(0)" class="link lang-item {{lang}} space"
+      (click)="changeLanguage(lang)">{{
       '_languages.' + lang | i18nextCap }}</a>
     <span *ngIf="language === lang" class="current lang-item {{lang}} space">{{ '_languages.' + lang |
       i18nextCap }}</span>
