--- a/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.html
+++ b/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.html
@@ -7,6 +7,119 @@
   <div style="padding-right: 20px;">
     <!-- <button class="createEntityButton" mat-raised-button color="primary" (click)="openModal('add-prop')">Create
       Entity</button> -->
+    <div class="container">
+      <div class="row">
+        <div class="col-header col-md-4 col-lg-4 col-sm-6">
+          Client Properties
+        </div>
+        <div class="col-header col-md-4 col-lg-4 col-sm-6">
+          Server Properties
+        </div>
+        <div class="col-header col-md-4 col-lg-4 col-sm-6">
+          Deployment
+        </div>
+      </div>
+      <!-- first -->
+      <!-- <form [formGroup]="technicalForm"> -->
+      <div class="row">
+        <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
+          <mat-form-field>
+            <mat-label>Client Development Languages</mat-label>
+            <mat-select [(ngModel)]="selected.clientLanguage" (ngModelChange)="onChange($event)"
+              [compareWith]="compareById">
+              <mat-option *ngFor="let clientlanguage of technical.clientLanguage" [value]="clientlanguage">
+                {{clientlanguage.label}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <!-- <label for="client-language">Client Development Languages</label>
+            <select class="form-control" [(ngModel)]="clientLanguage" id="client-language">
+              <option value="" selected>none</option>
+              <option value="english">English</option>
+              <option value="tamil">Tamil</option>
+              <option value="spanish">Spanish</option>
+            </select> -->
+        </div>
+        <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
+          <mat-form-field>
+            <mat-label>Server Development Language</mat-label>
+            <mat-select [(ngModel)]="selected.serverLanguage" (ngModelChange)="onChange($event)"
+              [compareWith]="compareById">
+              <mat-option *ngFor="let serverlanguage of technical.serverLanguage" [value]="serverlanguage">
+                {{serverlanguage.label}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
+          <mat-form-field>
+            <mat-label>Deployment Target</mat-label>
+            <mat-select [(ngModel)]="selected.deploymentTarget" (ngModelChange)="onChange($event)"
+              [compareWith]="compareById">
+              <mat-option *ngFor="let target of technical.deploymentTarget" [value]="target">
+                {{target.label}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+      <!-- second -->
+      <div class="row">
+        <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
+          <mat-form-field>
+            <mat-label>Client Development Frameworks</mat-label>
+            <mat-select [(ngModel)]="selected.clientFramework" (ngModelChange)="onChange($event)"
+              [compareWith]="compareById">
+              <mat-option *ngFor="let clientframework of technical.clientFramework" [value]="clientframework">
+                {{clientframework.label}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
+          <mat-form-field>
+            <mat-label>Server Development Framework</mat-label>
+            <mat-select [(ngModel)]="selected.serverFramework" (ngModelChange)="onChange($event)"
+              [compareWith]="compareById">
+              <mat-option *ngFor="let serverframework of technical.serverFramework" [value]="serverframework">
+                {{serverframework.label}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
+          <mat-form-field>
+            <mat-label>Deployment Server</mat-label>
+            <mat-select [(ngModel)]="selected.deploymentServer" (ngModelChange)="onChange($event)"
+              [compareWith]="compareById">
+              <mat-option *ngFor="let deploymentserver of technical.deploymentServer" [value]="deploymentserver">
+                {{deploymentserver.label}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+      <!-- third -->
+      <div class="row">
+        <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
+
+        </div>
+        <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
+          <mat-form-field>
+            <mat-label>DataBase</mat-label>
+            <mat-select [(ngModel)]="selected.database" (ngModelChange)="onChange($event)" [compareWith]="compareById">
+              <mat-option *ngFor="let database of technical.database" [value]="database">
+                {{database.label}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="techDropdown col-md-4 col-lg-4 col-sm-6">
+
+        </div>
+      </div>
+      <!-- </form> -->
+    </div>
   </div>
 </mat-expansion-panel>
 
