--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -36,7 +36,7 @@
           </ag-grid-angular>
         </div>
 
-        <div class="flowTable mt-sm-3">
+        <div class="flowTable mt-sm-3" *ngIf="showFeatureEntity">
           <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
             [columnDefs]="columnFeatureEntity" [rowSelection]="rowSelection" [rowData]="featureEntity"
             [animateRows]="true" [defaultColDef]="defaultColDef" (gridReady)="onFeatureEntityGridReady($event)">
