Fixed the build issue in service.

--- a/application/clients/desktop/src/app/homepage/homepage.component.scss
+++ b/application/clients/desktop/src/app/homepage/homepage.component.scss
@@ -11,7 +11,7 @@
     /* background: linear-gradient(to top right, #1f5679 10%, #eaf4ff 90%); */
     /* display: flex; */
     /* flex-basis: 550px; */
-    text-align: right;
+    float: right;
     /* height: 100vh; */
     padding-right: 7%;
     padding-top: 1%;
