fetch the data based on the relations and ui fixes

--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -24,7 +24,7 @@
                 <div><span>{{feature.description}}</span></div>
                 <br />
                 <button class="btn btn-info" [routerLink]="['/feature-details']"
-                  [queryParams]="{feature: feature.name}">View Details</button>
+                  [queryParams]="{featureId: feature._id}">View Details</button>
               </div>
             </div>
           </div>
