--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -12,7 +12,7 @@
         </mat-expansion-panel-header>
         <div class="flowTable mt-sm-3">
           <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
-            [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="allFeatureFlows" [animateRows]="true"
+            [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="featureFlowRowData" [animateRows]="true"
             [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureFlow() (gridReady)="onFlowGridReady($event)">
           </ag-grid-angular>
         </div>
