--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -29,18 +29,26 @@
         <mat-expansion-panel-header>
           <mat-panel-title> Entities </mat-panel-title>
         </mat-expansion-panel-header>
-        <div class="flowTable mt-sm-3">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
-            [columnDefs]="columnFeatureEntityData" [rowSelection]="rowSelection" [rowData]="featureEntityData"
-            [animateRows]="true" [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureEntityData() (gridReady)="onFeatureEntityDataGridReady($event)">
-          </ag-grid-angular>
-        </div>
-
-        <div class="flowTable mt-sm-3" *ngIf="showFeatureEntity">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
-            [columnDefs]="columnFeatureEntity" [rowSelection]="rowSelection" [rowData]="featureEntity"
-            [animateRows]="true" [defaultColDef]="defaultColDef" (gridReady)="onFeatureEntityGridReady($event)">
-          </ag-grid-angular>
+        <div class="row" style="margin: 0px;">
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-header">
+                {{hello}}
+                <!-- <img *ngIf="!entity.is_default" style="float: right; cursor: pointer;" (click)="editEntity(entity)"
+                  src="https://img.icons8.com/metro/26/000000/edit-file.png"> -->
+              </div>
+              <div class="card-body">
+                <div><span>{{hello}}</span></div>
+                <br />
+                <button mat-raised-button color="primary">Edit</button>
+                &nbsp;
+                <button mat-raised-button color="warn">Delete</button>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-md-4" >
+            No Entity Available.
+          </div> -->
         </div>
         <!-- <div class="float-right">
           <button class="btn btn-primary" (click)="openScreenModal()">Add Screens</button>
@@ -67,22 +75,22 @@
           <mat-panel-title> Screens </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <div class="float-right">
-          <button class="btn btn-primary" (click)="openScreenModal()">Add Screens</button>
-        </div>
+        <mat-card-content>
+
+          <button class="btn btn-success float-right" mat-raised-button (click)="GoToDesigner()">Add Screen</button>
+        </mat-card-content>
         <div class="row" style="margin: 0px;">
-          <div class="col-md-4" *ngFor="let screen of screens">
+          <div class="col-md-4" *ngFor="let screen of distinctFeatureDetails">
             <div class="card">
-              <div class="card-header">
-                {{screen.screenName}}
-              </div>
+              <!-- <div class="card-header">
+                {{screen}}
+              </div> -->
               <div class="card-body">
-                  {{screen.description}}
-                <!-- <button class="btn btn-primary" (click)="getAllFeatureFlows(screen.screenName)">See Flows</button> -->
+                {{screen}}
               </div>
             </div>
           </div>
-          <div class="col-md-4" *ngIf="screens.length === 0">
+          <div class="col-md-4" *ngIf="distinctFeatureDetails.length === 0">
             No Available.
           </div>
         </div>
