--- a/application/clients/desktop/src/app/available-connector/available-connector.component.html
+++ b/application/clients/desktop/src/app/available-connector/available-connector.component.html
@@ -5,7 +5,7 @@
     <button mat-raised-button color="warn" (click)="deleteConnector()">{{ 'delete' | i18next }}</button>
   </div>
   <div class="flowTable">
-    <ag-grid-angular #agGrid style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
+    <ag-grid-angular #agGrid style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef" domLayout='autoHeight'
       (rowSelected)="selectAvaConnector()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
       [columnDefs]="connectorColDef" [rowData]="connectorData" (gridReady)="onGridConnectorReady($event)">
     </ag-grid-angular>
