--- a/application/clients/desktop/src/app/config-manager/config-manager.component.html
+++ b/application/clients/desktop/src/app/config-manager/config-manager.component.html
@@ -16,8 +16,8 @@
       </select>
     </div>
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnDefs"
-      [rowSelection]="rowSelection" [rowData]="rowData" [pagination]="true" [paginationPageSize]="paginationPageSize"
-      [paginationNumberFormatter]="paginationNumberFormatter" [animateRows]="true" [defaultColDef]="defaultColDef"
+    [rowSelection]="rowSelection" [rowData]="rowData" [pagination]="true" [paginationPageSize]="paginationPageSize" domLayout='autoHeight'
+    [paginationNumberFormatter]="paginationNumberFormatter" [animateRows]="true" [defaultColDef]="defaultColDef"
       (selectionChanged)="onSelectionChanged()" [floatingFilter]="true" (gridReady)="onGridReady($event)">
     </ag-grid-angular>
   </div>
