--- a/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.html
+++ b/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.html
@@ -14,8 +14,8 @@
 
   <div style="height: 80%; padding-top: 10px; box-sizing: border-box;">
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnDefs"
-      [rowData]="rowData" [defaultColDef]="defaultColDef" [animateRows]="true" (gridReady)="onGridReady($event)"
-      [frameworkComponents]="frameworkComponents"></ag-grid-angular>
+    [rowData]="rowData" [defaultColDef]="defaultColDef" [animateRows]="true" (gridReady)="onGridReady($event)" domLayout='autoHeight'
+    [frameworkComponents]="frameworkComponents"></ag-grid-angular>
   </div>
   <br />
   <br />
