--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -11,14 +11,14 @@
           <mat-panel-title> Feature Flows </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="flowTable mt-sm-3">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
+          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" domLayout='autoHeight'
             [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="featureFlowRowData" [animateRows]="true"
             [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureFlow() (gridReady)="onFlowGridReady($event)">
           </ag-grid-angular>
         </div>
 
         <div class="flowTable mt-sm-3" *ngIf="showFeatureFlowComponent">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
+          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" domLayout='autoHeight'
             [columnDefs]="columnFeatureDefs" [rowSelection]="rowSelection" [rowData]="rowFlowCompData"
             [animateRows]="true" [defaultColDef]="defaultColDef" (gridReady)="onFlowCompGridReady($event)">
           </ag-grid-angular>
@@ -30,25 +30,26 @@
           <mat-panel-title> Entities </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="row" style="margin: 0px;">
-          <div class="col-md-4">
-            <div class="card">
+          <div class="col-md-4" *ngFor="let entity of featureEntityDetails; let i = index">
+            <div class="card mt-sm-3">
               <div class="card-header">
-                {{hello}}
+                {{entity.name}}
                 <!-- <img *ngIf="!entity.is_default" style="float: right; cursor: pointer;" (click)="editEntity(entity)"
                   src="https://img.icons8.com/metro/26/000000/edit-file.png"> -->
               </div>
               <div class="card-body">
-                <div><span>{{hello}}</span></div>
+                <div><span>{{entity.description}}</span></div>
                 <br />
-                <button mat-raised-button color="primary">Edit</button>
-                &nbsp;
-                <button mat-raised-button color="warn">Delete</button>
+                <button mat-raised-button color="primary" (click)="editEntityField(entity)">Edit</button>
+                <!-- &nbsp;
+                <button mat-raised-button color="warn" [disabled]="entity.is_default"
+                  (click)="openDeleteModel(entity)">Delete</button> -->
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-4" >
+          <div class="col-md-4" *ngIf="featureEntityDetails.length === 0">
             No Entity Available.
-          </div> -->
+          </div>
         </div>
         <!-- <div class="float-right">
           <button class="btn btn-primary" (click)="openScreenModal()">Add Screens</button>
