--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -4,69 +4,73 @@
     <br />
     <br />
     <div>
-      
-      <mat-accordion>
-    <mat-expansion-panel [expanded]="true">
-    <mat-expansion-panel-header>
-    <mat-panel-title>My Features </mat-panel-title>
-    </mat-expansion-panel-header>
-    
-    <div style="padding-right: 20px;">
-    <button class="btn btn-primary float-right" color="primary" (click)="openFeatureDialog()">Add
-    Features</button>
-    </div>
-    <div class="row" style="margin: 0px;" *ngIf="projectFeatureData.length > 0">
-    <div class="col-md-4" *ngFor="let feature of projectFeatureData; let i = index">
-    <div class="card">
-    <div class="card-header">
-    {{feature.name}}
-    </div>
-    <div class="card-body">
-    <div><span>{{feature.description}}</span></div>
-    <br />
-    <button class="btn btn-info" [routerLink]="['/feature-details']"
-    [queryParams]="{featureId: feature._id,  projectId: project_id}">View Details</button>
-    <button class="btn btn-info ml-sm-3" (click)="openFeatureFlowDialog(feature._id)">Add
-        Flows</button>
-    </div>
-    </div>
-    </div>
-    <div class="col-md-4" *ngIf="featureData && featureData.length === 0">
-    No Feature Available.
-    </div>
-    </div>
-    </mat-expansion-panel>
-    <mat-expansion-panel>
-    <mat-expansion-panel-header>
-    <mat-panel-title> Entities </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div style="padding-right: 20px;">
-    <button class="createEntityButton" mat-raised-button color="primary" (click)="saveEntityModel()">Create
-    Entity</button>
-    </div>
-    <div class="row" style="margin: 0px;">
-    <div class="col-md-4" *ngFor="let entity of projectEntity; let i = index">
-    <div class="card">
-    <div class="card-header">
-    {{entity.name}}
-    <img *ngIf="!entity.is_default" style="float: right; cursor: pointer;" (click)="editEntity(entity)"
-    src="https://img.icons8.com/metro/26/000000/edit-file.png">
-    </div>
-    <div class="card-body">
-    <div><span>{{entity.description}}</span></div>
-    <br />
-    <button mat-raised-button color="primary" (click)="editEntityField(entity)">Edit</button>
-    &nbsp;
-    <button mat-raised-button color="warn" [disabled]="entity.is_default"
-    (click)="openDeleteModel(entity)">Delete</button>
-    </div>
-    </div>
-    </div>
-    <div class="col-md-4" *ngIf="projectEntity.length === 0">
-    No Entity Available.
-    </div>
-    </div>
-    <!-- 
+
+        <mat-accordion>
+            <mat-expansion-panel [expanded]="true">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>My Features </mat-panel-title>
+                </mat-expansion-panel-header>
+
+                <div style="padding-right: 20px;">
+                    <button class="btn btn-primary float-right" color="primary" (click)="openFeatureDialog()">Add
+                        Features</button>
+                </div>
+                <div class="row" style="margin: 0px;" *ngIf="projectFeatureData.length > 0">
+                    <div class="col-md-4" *ngFor="let feature of projectFeatureData; let i = index">
+                        <div class="card">
+                            <div class="card-header">
+                                {{feature.name}}
+                            </div>
+                            <div class="card-body">
+                                <div><span>{{feature.description}}</span></div>
+                                <br />
+                                <button class="btn btn-info" [routerLink]="['/feature-details']"
+                                    [queryParams]="{featureId: feature._id,  projectId: project_id}">View
+                                    Details</button>
+                                <button class="btn btn-info ml-sm-3" (click)="openFeatureFlowDialog(feature._id)">Add
+                                    Flows</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" *ngIf="featureData && featureData.length === 0">
+                        No Feature Available.
+                    </div>
+                </div>
+            </mat-expansion-panel>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title> Entities </mat-panel-title>
+                </mat-expansion-panel-header>
+                <div style="padding-right: 20px;">
+                    <button class="createEntityButton" mat-raised-button color="primary"
+                        (click)="saveEntityModel()">Create
+                        Entity</button>
+                </div>
+                <div class="row" style="margin: 0px;">
+                    <div class="col-md-4" *ngFor="let entity of projectEntity; let i = index">
+                        <div class="card">
+                            <div class="card-header">
+                                {{entity.name}}
+                                <img *ngIf="!entity.is_default" style="float: right; cursor: pointer;"
+                                    (click)="editEntity(entity)"
+                                    src="https://img.icons8.com/metro/26/000000/edit-file.png">
+                            </div>
+                            <div class="card-body">
+                                <div><span>{{entity.description}}</span></div>
+                                <br />
+                                <button mat-raised-button color="primary"
+                                    (click)="editEntityField(entity)">Edit</button>
+                                &nbsp;
+                                <button mat-raised-button color="warn" [disabled]="entity.is_default"
+                                    (click)="openDeleteModel(entity)">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" *ngIf="projectEntity.length === 0">
+                        No Entity Available.
+                    </div>
+                </div>
+                <!-- 
 
     <mat-card *ngFor="let entity of allEntity" class="entity-card">
     <mat-card-header>
@@ -92,6 +96,27 @@
 
                     <button class="createEntityButton goToButton" mat-raised-button (click)="GoToDesigner()">Add
                         Screen</button>
+                    <div class="row" style="margin: 0px;">
+                        <div class="col-md-4" *ngFor="let screen of screenDetails; let i = index">
+                            <div class="card">
+                                <div class="card-header">
+                                    {{screen.foldername}}
+                                    <img style="float: right; cursor: pointer;"
+                                        src="https://img.icons8.com/metro/26/000000/edit-file.png">
+                                </div>
+                                <div class="card-body">
+
+                                    <button mat-raised-button color="primary">Edit</button>
+                                    &nbsp;
+                                    <button mat-raised-button color="warn"
+                                        [disabled]="entity.is_default">Delete</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4" *ngIf="screenDetails.length === 0">
+                            No Screen Available.
+                        </div>
+                    </div>
                 </mat-card-content>
                 <!-- <div class="row" style="margin: 0px;" *ngIf="selecteddefaultEntity && selecteddefaultEntity.length > 0">
     <div class="col-md-4" *ngFor="let defaultEntity of selecteddefaultEntity; let i = index">
