--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -8,25 +8,6 @@
     <mat-accordion>
       <mat-expansion-panel [expanded]="true">
         <mat-expansion-panel-header>
-          <mat-panel-title> Feature Flows </mat-panel-title>
-        </mat-expansion-panel-header>
-        <div class="flowTable mt-sm-3">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" domLayout='autoHeight'
-            [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="featureFlowRowData" [animateRows]="true"
-            [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureFlow() (gridReady)="onFlowGridReady($event)">
-          </ag-grid-angular>
-        </div>
-
-        <div class="flowTable mt-sm-3" *ngIf="showFeatureFlowComponent">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" domLayout='autoHeight'
-            [columnDefs]="columnFeatureDefs" [rowSelection]="rowSelection" [rowData]="rowFlowCompData"
-            [animateRows]="true" [defaultColDef]="defaultColDef" (gridReady)="onFlowCompGridReady($event)">
-          </ag-grid-angular>
-        </div>
-
-      </mat-expansion-panel>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
           <mat-panel-title> Entities </mat-panel-title>
         </mat-expansion-panel-header>
         <div style="margin-left: 64rem;">
@@ -109,45 +90,33 @@
       </div>
 
       </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> Feature Flows </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="flowTable mt-sm-3">
+          <ag-grid-angular #agGrid style="width: 100%; height: 100%; margin-top: 50px;" id="myGrid" class="ag-theme-balham" domLayout='autoHeight'
+            [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="featureFlowRowData" [animateRows]="true"
+            [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureFlow() (gridReady)="onFlowGridReady($event)">
+          </ag-grid-angular>
+        </div>
+
+        <div class="flowTable mt-sm-3" *ngIf="showFeatureFlowComp">
+          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef" domLayout='autoHeight'
+            (rowSelected)="selectFlowComponent()" [animateRows]="true" class="ag-theme-balham" [columnDefs]="fcompColDefs"
+            [rowData]="flow_comp" [rowSelection]="rowSelection" (gridReady)="onFCGridReady($event)">
+          </ag-grid-angular>
+        </div>
+
+        <div class="flowTable mt-sm-3" *ngIf="showFeatureFlowComponent">
+          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" domLayout='autoHeight'
+            [columnDefs]="columnFeatureDefs" [rowSelection]="rowSelection" [rowData]="rowFlowCompData"
+            [animateRows]="true" [defaultColDef]="defaultColDef" (gridReady)="onFlowCompGridReady($event)">
+          </ag-grid-angular>
+        </div>
+
+      </mat-expansion-panel>
     </mat-accordion>
   </div>
 
-</div>
-
-
-<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayModel}">
-  <div class="modal-dialog modal-lg" role="dialog">
-    <div class="modal-content">
-      <div class="container">
-        <form class="m-3">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="screen">Screen Name</label>
-                <input type="text" class="form-control" rows="1" id="screen-name" placeholder="Enter a screen name"
-                  name="screen-name" [(ngModel)]="screenData.screenName">
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="description">Description</label>
-                <input type="text" class="form-control" placeholder="enter your description" id="description"
-                  name="description" [(ngModel)]="screenData.description">
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <div class="form-group">
-          <button type="button" class="btn button-create" (click)="createScreen()">Create</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandled()">Cancel</button>
-        </div>
-        <div class="form-group" *ngIf="checkUpdate">
-          <button type="button" class="btn button-create" (click)="updateFlowModel()">Update</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandledForUpdate()">Cancel</button>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
